<resources>
    <string name="app_name">IFavorites</string>
    <string name="creator">Creator</string>
    <string name="ifavorite">My Favorites</string>
    <string name="loading">Loading, please wait...</string>
    <string name="downloading">%s (%d/%d)</string>
    <string name="login">Log In</string>
    <string name="please_input_email">Please enter your email address</string>
    <string name="please_input_password">Please enter your password</string>
    <string name="go_register">Don\'t have an account? Go register!</string>
    <string name="go_login">Already have an account? Go log in!</string>
    <string name="register">Register</string>
    <string name="download_resource">Download this resource</string>
    <string name="please_input_server_url">Please enter the server URL (e.g., http://192.168.1.100:5000)</string>
    <string name="please_first_login">Please log in first</string>
    <string name="main_folders_load_failed">Failed to load main folders</string>
    <string name="network_error">Network error: </string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login successful</string>
    <string name="favorite_complete">Favorite added!</string>
    <string name="sub_menu_cannot_empty">Submenu cannot be empty</string>
    <string name="new_sub_menu">New Submenu: </string>
    <string name="please_input_favorite_url">Please enter the favorite link</string>
    <string name="add_favorite_url">Add favorite link</string>
    <string name="url_correct">Invalid URL!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_input_sub_menu_name">Please enter the menu name</string>
    <string name="add_sub_menu">Add Submenu</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="select_main_folders">Select main menu</string>
    <string name="select_sub_menu">Select submenu</string>
    <string name="i_need_add_sub_menu">I need to add a new menu</string>
    <string name="please_input_link">Link to be downloaded</string>
    <string name="download_the_resource">Download this resource</string>
    <string name="click_favorite">Click to favorite</string>
</resources>