<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="recvFavorite"
            type="com.xlzhen.ifavorites.viewmodel.RecvFavoriteActivityViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/add_favorite"
                app:titleCentered="true"
                app:titleTextColor="@android:color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mainMenuLayout"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/select_main_folders">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/mainMenuSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/subMenuLayout"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/select_sub_menu"
                    android:visibility="@{recvFavorite.newSubMenu?View.GONE:View.VISIBLE}">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/subMenuSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editableSubMenuLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/add_sub_menu"
                    android:visibility="@{recvFavorite.newSubMenu?View.VISIBLE:View.GONE}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editableSubMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={recvFavorite.newSubMenuText}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={recvFavorite.newSubMenu}"
                    android:text="@string/i_need_add_sub_menu" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/noteLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/please_input_link">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/noteEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:minLines="4"
                        android:text="@={recvFavorite.urlText}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/downloadCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={recvFavorite.downloadResource}"
                    android:layout_marginTop="16dp"
                    android:text="@string/download_the_resource" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:visibility="@{recvFavorite.downloading?View.VISIBLE:View.GONE}"
            app:cardBackgroundColor="@android:color/holo_blue_light"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@{@string/downloading(recvFavorite.progressMessage,recvFavorite.successCount,recvFavorite.totalCount)}"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:visibility="@{recvFavorite.downloading?View.GONE:View.VISIBLE}"
            android:onClick="@{recvFavorite::favoriteClick}"
            android:text="@string/click_favorite"
            app:cornerRadius="5dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
